k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sensors
  namespace: sensors
spec:
  selector:
    app: sensors
  ports:
    - port: 80
      targetPort: http   # named port on the pod - see deployment.yaml
  type: ClusterIP
